# ghost-in-the-minishell

./: .gitignore  :w  CMakeLists.txt  Makefile  README.md  a.out  absolute_cmd.c  append.c  assign_cmd_or_builtin.c  assign_types.c  blocks_to_list.c  blocks_to_list_utils.c  built_in_utils.c  bultins.c  caca.txt  check_pipes.c  clean_cmd.c  copy_env.c  copy_env_utils.c  create_cmd.c  create_cmd_redir.c  create_cmd_utils.c  create_lst.c  custom_parsing_split.c  custom_parsing_split_utils.c  dollar.c  error.c  execve.c  execve_utils.c  execve_utils.c.orig  execve_utils_2.c  exit.c  expand_variable.c  expand_variable.c.orig  expand_variable_utils.c  free_lst.c  hajar.patch  heredoc.c  init.c  init.c.orig  (+26 more)
ascii_art/: ghost
built_in/: built_in_utils.c  cd.c  cd_utils.c  copy_lst.c  echo.c  echo_utils.c  env.c  exit.c  exit_utils.c  export.c  export_sorted.c  export_utils.c  list_utils.c  print_shlvl.c  pwd.c  unset.c
built_in/cd/: a.out  cd.c  check_cd.c
